# nitrokey-pro-firmware

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  DEVELOPMENT.md  Dockerfile  Dockerfile.debian  Dockerfile.previous  Makefile  README  README.md  RELEASE.md  bootloader-notes.md  coding-styles.sh  debug.py  docker.mk  notes  notes.md  stm32f1.cfg  test.txt
src/: CMakeLists.txt  README.md  debug.c  hw_config.c  hw_config_rev4.c  hw_config_rev4.h  main.c  memory_ops.c  stack_protector.c  tags  test_code.c  tools.c
src/ASSEMBLER/: cortexm3_macro.s  startup_stm32f10x_hd.s
src/CCID/: CcidLocalAccess.c  Ccid_usb.c  Crd.c  Ifd_ccid.c
src/CCID/CCIDHID_USB/: CCIDHID_usb_desc.c  CCIDHID_usb_prop.c
src/CCID/SMARTCARD/: smartcard.c
src/CRYPT/: hotp.c
src/CRYPT/AES/: aes.c
src/INC/: CCIDHID_usb.h  CCIDHID_usb_conf.h  CCIDHID_usb_desc.h  CCIDHID_usb_prop.h  CCID_Crd.h  CCID_Macro.h  CCID_usb_conf.h  CCID_usb_prop.h  CcidLocalAccess.h  FAT12.h  FlashStorage.h  HandleAesStorageKey.h  RAMDISK_usb_desc.h  RAMDISK_usb_prop.h  aes.h  fsmc_nand.h  hotp.h  hw_config.h  keyboard.h  memory.h  memory_ops.h  msd.h  nand_if.h  password_safe.h  ramdisk.h  report_protocol.h  sdcard.h  smartcard.h  stm32f10x_conf.h  stm32f10x_systick.h  tools.h  type.h  usb_bot.h  usb_conf.h  usb_desc.h  usb_istr.h  usb_prop.h  usb_pwr.h  usb_scsi.h
src/KEYBOARD/: ctags.tmp  keyboard.c  report_protocol.c
src/PWD_SAFE/: FlashStorage.c  HandleAesStorageKey.c  password_safe.c
src/SD_DISK/SD_USB/: usb_desc.c
src/STM/: stm32f10x_it.c
src/STM/Libraries/STM32F10x_StdPeriph_Driver/inc/: misc.h  stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_crc.h  stm32f10x_dma.h  stm32f10x_fsmc.h  stm32f10x_i2c.h  stm32f10x_rtc.h  stm32f10x_sdio.h  stm32f10x_tim.h  stm32f10x_wwdg.h
src/STM/Libraries/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_exti.c  stm32f10x_i2c.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_sdio.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c
src/STM/Libraries/STM32_USB-FS-Device_Driver/inc/: usb_def.h  usb_init.h  usb_int.h  usb_lib.h  usb_mem.h  usb_regs.h  usb_type.h
src/STM/Libraries/STM32_USB-FS-Device_Driver/src/: usb_mem.c
src/USB/: usb_bot.c  usb_endp.c  usb_istr.c  usb_pwr.c
src/ccid/: CcidLocalAccess.c  Ccid_usb.c  Crd.c  Ifd_ccid.c  Ifd_protocol.c  parse_tlv.c
src/ccid/CCIDHID_USB/: CCIDHID_usb_desc.c  CCIDHID_usb_prop.c
src/ccid/smartcard/: smartcard.c
src/crypt/aes/: aes.c
src/crypt/pbkdf2/: pbkdf2.c
src/crypt/sha1/: hmac-sha1.c  sha1.c
src/crypt/sha4/: sha4.c
src/hotp/: hotp.c
src/inc/: AccessInterface.h  CCIDHID_usb_conf.h  CCIDHID_usb_desc.h  CCIDHID_usb_prop.h  CCID_Crd.h  CCID_Global.h  CCID_Ifd_ccid.h  CCID_Ifd_protocol.h  CCID_Macro.h  CCID_SlotErrorCode.h  CCID_usb.h  CCID_usb_conf.h  CCID_usb_desc.h  CCID_usb_prop.h  CcidLocalAccess.h  FAT12.h  FlashStorage.h  HandleAesStorageKey.h  RAMDISK_usb_desc.h  RAMDISK_usb_prop.h  aes.h  debug.h  delays.h  fsmc_nand.h  hmac-sha1.h  hotp.h  hw_config.h  hw_config_rev4.h  keyboard.h  mass_mal.h  memory.h  memory_layout.h  memory_ops.h  msd.h  nand_if.h  parse_tlv.h  password_safe.h  pbkdf2.h  platform_config.h  ramdisk.h  (+18 more)
src/keyboard/: keyboard.c  report_protocol.c
src/pwd-safe/: FlashStorage.c  HandleAesStorageKey.c  password_safe.c
src/sd-disk/sd-usb/: usb_desc.c  usb_prop.c
src/stm/: stm32f10x_it.c  stm32f10x_systick.c
src/stm-std-periph/: Release_Notes.html
src/stm-std-periph/Libraries/STM32F10x_StdPeriph_Driver/inc/: misc.h  stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_cec.h  stm32f10x_crc.h  stm32f10x_dac.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_gpio.h  stm32f10x_i2c.h  stm32f10x_iwdg.h  stm32f10x_pwr.h  stm32f10x_rcc.h  stm32f10x_rtc.h  stm32f10x_sdio.h  stm32f10x_spi.h  stm32f10x_tim.h  stm32f10x_usart.h  stm32f10x_wwdg.h
src/stm-std-periph/Libraries/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_can.c  stm32f10x_cec.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_dma.c  stm32f10x_exti.c  stm32f10x_flash.c  stm32f10x_fsmc.c  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_rtc.c  stm32f10x_sdio.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c
src/stm-std-periph/Libraries/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x69.html  globals_0x6e.html  globals_0x6f.html  globals_0x70.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x75.html  globals_0x77.html  globals_defs.html  globals_defs_0x63.html  globals_defs_0x64.html  globals_defs_0x65.html  globals_defs_0x66.html  globals_defs_0x67.html  globals_defs_0x69.html  globals_defs_0x6e.html  globals_defs_0x6f.html  globals_defs_0x70.html  globals_defs_0x72.html  globals_defs_0x73.html  globals_defs_0x74.html  globals_enum.html  globals_func.html  globals_func_0x62.html  globals_func_0x63.html  globals_func_0x64.html  globals_func_0x65.html  (+652 more)
src/stm-std-periph/Libraries/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  classes_61.html  classes_63.html  classes_64.html  (+55 more)
src/stm-std-periph/Project/STM32F10x_StdPeriph_Examples/: Release_Notes_for_STM32F10x_StdPeriph_Examples.html
src/stm-std-periph/Project/STM32F10x_StdPeriph_Template/: Release_Notes_for_STM32F10x_StdPeriph_Template.html  main.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h
src/stm-std-periph/Utilities/STM32_EVAL/: Release_Notes_for_STM32_EVAL.html  stm32_eval.c  stm32_eval.h
src/usb/: usb_bot.c  usb_endp.c  usb_istr.c  usb_pwr.c
src/utils/: delays.c  memory_ops.c
(+936 files in other folders)
